# which-llm

./: Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  update-data.yml
bucket/: aa.json
examples/: opencode_haiku_45_transcript.md
openspec/: project.md
openspec/changes/add-artificial-analysis-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-hosted-data-workflow/: design.md  proposal.md  tasks.md
openspec/changes/improve-cli-usability/: proposal.md
openspec/changes/integrate-models-dev/: test-plan.md
openspec/changes/rebrand-aa-to-which-llm/: proposal.md  tasks.md
openspec/changes/skill-install-command/: proposal.md  tasks.md
skill/: SKILL.md
skill/references/: BENCHMARK-LIMITATIONS.md  BENCHMARKS.md  CASCADE-PATTERNS.md  FALLBACK.md  INSTALL.md  MULTI-MODEL.md  PROVIDERS.md  QUERIES.md  SPECIALIZATION.md  WORKFLOWS.md
skills/which-llm/: SKILL.md
skills/which-llm/references/: BENCHMARKS.md  INSTALL.md  MULTI-MODEL.md  QUERIES.md
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  query.rs  remote.rs  schema.rs
src/cli/: mod.rs
src/client/: endpoints.rs  mod.rs
src/commands/: cache.rs  info.rs  llms.rs  media.rs  mod.rs  profile.rs  query.rs  quota.rs  refresh.rs  skill.rs  tables.rs
src/merge/: matcher.rs
src/models/: llm.rs  media.rs  mod.rs  response.rs
src/output/: csv.rs  json.rs  markdown.rs  mod.rs  plain.rs  table.rs
src/sources/models_dev/: client.rs  schema.rs
tests/: cli.rs
tests/eval/: scenarios.md
(+9 files in other folders)
