[package]
name = "which-llm"
version = "0.5.1"
edition = "2021"
description = "CLI for querying AI model benchmarks from Artificial Analysis"
license = "MIT"
repository = "https://github.com/richard-gyiko/which-llm"
keywords = ["ai", "llm", "benchmark", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration paths
dirs = "6"

# Zip file handling
zip = "2"

# Output formatting
tabled = "0.18"
csv = "1.3"

# Interactive prompts
dialoguer = "0.11"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Hash for cache keys
sha2 = "0.10"
hex = "0.4"

# Regex for model matching
regex = "1"

# Lazy initialization (MSRV-compatible alternative to std::sync::LazyLock)
once_cell = "1"

# SQL query support
duckdb = { version = "1.2", features = ["bundled", "parquet", "appender-arrow"] }
sqlparser = { version = "0.41", features = ["visitor"] }
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
